src/k8s/kafka.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093

---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka-headless
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.8.3
          ports:
            - containerPort: 9092
              name: plaintext
            - containerPort: 9093
              name: controller
          volumeMounts:
            - name: data
              mountPath: /var/lib/kafka/data
          readinessProbe:
            exec:
              command:
                - kafka-broker-api-versions
                - --bootstrap-server
                - localhost:9092
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 5
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi  # Adjust size as needed
