src/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8003
      - path: /pgadmin(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pgadmin
            port:
              number: 80
      - path: /mongo(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mongo-express
            port:
              number: 8081
      - path: /keycloak(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak
            port:
              number: 8080
